# Branlly_next

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
apps/desktop/web/public/games/blockcraft-lite/: README.md  game.js  index.html  style.css
apps/desktop/web/public/games/blockcraft-lite/assets/: LICENSES.md
apps/desktop/web/public/games/subwaylike/: README.md  game.js  index.html  style.css
apps/desktop/web/src/: App.svelte  app.css
apps/desktop/web/src/lib/: animation.test.ts  animation.ts  backend.test.ts  backend.ts  games.test.ts  launcher.test.ts  launcher.ts  menu-hierarchy.test.ts
crates/branlly-core/: Cargo.toml
crates/branlly-core/src/: command.rs  config.rs  error.rs  launch_item.rs  lib.rs  message.rs  state.rs  storage.rs
crates/branlly-core/tests/: memory_contract.rs
crates/branlly-ollama/: Cargo.toml
crates/branlly-ollama/src/: lib.rs
crates/branlly-ollama/tests/: client_contract.rs
crates/branlly-platform/: Cargo.toml
crates/branlly-platform-linux/: Cargo.toml
crates/branlly-platform-linux/src/: lib.rs
crates/branlly-platform-windows/: Cargo.toml
crates/branlly-platform-windows/src/: lib.rs
crates/branlly-platform/src/: lib.rs
crates/branlly-storage-json/: Cargo.toml
crates/branlly-storage-json/src/: lib.rs
docs/: architecture.md  development.md  parity.md  security.md
docs/adr/: 0001-linux-first-hexagonal-architecture.md
install/: README.md  linux-install.sh  windows-install.ps1
scripts/: check.sh  install-linux-deps.sh
