[package]
name = "branlly-ollama"
description = "Asynchronous streaming Ollama client for Branlly"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
async-stream.workspace = true
branlly-core = { path = "../branlly-core" }
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
url.workspace = true

[dev-dependencies]
tokio.workspace = true
wiremock.workspace = true
