[package]
name = "branlly-platform-windows"
description = "Windows implementation of Branlly platform ports"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
branlly-platform = { path = "../branlly-platform" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
