[package]
name = "branlly-storage-json"
description = "Versioned JSON persistence adapter for Branlly"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
atomic-write-file = "0.3.0"
branlly-core = { path = "../branlly-core" }
serde_json.workspace = true

[dev-dependencies]
tempfile = "3.23.0"
